appId: dev.horologia.mobile
---
- launchApp
- runFlow:
    when:
      visible: "Open in.*Horologia.*"
    commands:
      - tapOn: "Cancel"
- extendedWaitUntil:
    visible: "My Tasks"
    timeout: 20000
- tapOn: "Create task"
- runFlow:
    when:
      visible: "Runtime version:.*"
    commands:
      - tapOn: "Close"
      - waitForAnimationToEnd
      - tapOn: "Create task"
- extendedWaitUntil:
    visible: "New task"
    timeout: 20000
- assertVisible: "Space"
- assertVisible: "Basics"
